--- a/CharacterSheet/CharacterSheet.csproj
+++ b/CharacterSheet/CharacterSheet.csproj
@@ -46,17 +46,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Character.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="AddCharacter.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AddCharacter.Designer.cs">
+      <DependentUpon>AddCharacter.cs</DependentUpon>
     </Compile>
+    <Compile Include="DBHelper.cs" />
     <Compile Include="frmStats.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmStats.Designer.cs">
       <DependentUpon>frmStats.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,11 +79,14 @@
     <Compile Include="Welcome.Designer.cs">
       <DependentUpon>Welcome.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="AddCharacter.resx">
+      <DependentUpon>AddCharacter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmStats.resx">
       <DependentUpon>frmStats.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
